--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
    <header class="site-header inicio">
-      <div class="container">
+      <div class="contenedor contenedor-header">
          <div class="barra">
             <a href="/">
                <img src="img/logo.svg" alt="logo">
@@ -25,23 +25,25 @@
       </div> 
    </header>
    
-   <section>
+   <section class="contenedor seccion">
       <h2>Más sobre Nosotros</h2>
       
-      <div>
-         <img src="img/icono1.svg" alt="Icono Seguridad">
-         <h3>Seguridad</h3>
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, corrupti adipisci aut quis nobis fugit distinctio et quidem dolores sint similique ratione natus quod beatae?</p>
-      </div>
-      <div>
-         <img src="img/icono2.svg" alt="Mejor Precio">
-         <h3>El Mejor Precio</h3>
-         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta temporibus eaque iusto delectus rerum libero quae sunt accusamus provident! Quam libero est dolore eligendi eum.</p>
-      </div>
-      <div>
-         <img src="img/icono3.svg" alt="A Tiempo">
-         <h3>A Tiempo</h3>
-         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore vitae iure harum quasi error labore accusamus, atque, nostrum commodi voluptatum sunt nulla autem ipsa deserunt.</p>
+      <div class="iconos-nosotros">
+         <div class="icono">
+            <img src="img/icono1.svg" alt="Icono Seguridad">
+            <h3>Seguridad</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, corrupti adipisci aut quis nobis fugit distinctio et quidem dolores sint similique ratione natus quod beatae?</p>
+         </div>
+         <div class="icono">
+            <img src="img/icono2.svg" alt="Mejor Precio">
+            <h3>El Mejor Precio</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta temporibus eaque iusto delectus rerum libero quae sunt accusamus provident! Quam libero est dolore eligendi eum.</p>
+         </div>
+         <div class="icono">
+            <img src="img/icono3.svg" alt="A Tiempo">
+            <h3>A Tiempo</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore vitae iure harum quasi error labore accusamus, atque, nostrum commodi voluptatum sunt nulla autem ipsa deserunt.</p>
+         </div>
       </div>
    </section>
 
