--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
 
    <title>Desarrollo Web Completo con HTML5, CSS3, JS, AJAX, PHP y MySQL</title>
 </head>
+
 <body>
    <header class="site-header inicio">
       <div class="contenedor contenedor-header">
@@ -19,102 +21,184 @@
                <a href="anuncios.html" target="_blank">Anuncios</a>
                <a href="blog.html" target="_blank">Blog</a>
                <a href="contacto.html" target="_blank">Contacto</a>
-               </nav>
+            </nav>
          </div>
          <h1>Venta de Casas y Departamentos Exclusivos de Lujo</h1>
-      </div> 
+      </div>
    </header>
-   
+
    <section class="contenedor seccion">
-      <h2>Más sobre Nosotros</h2>
-      
+      <h2 class="fw-400 centrar-texto">Más sobre Nosotros</h2>
+
       <div class="iconos-nosotros">
          <div class="icono">
             <img src="img/icono1.svg" alt="Icono Seguridad">
             <h3>Seguridad</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, corrupti adipisci aut quis nobis fugit distinctio et quidem dolores sint similique ratione natus quod beatae?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, corrupti adipisci aut quis nobis fugit
+               distinctio et quidem dolores sint similique ratione natus quod beatae?</p>
          </div>
          <div class="icono">
             <img src="img/icono2.svg" alt="Mejor Precio">
             <h3>El Mejor Precio</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta temporibus eaque iusto delectus rerum libero quae sunt accusamus provident! Quam libero est dolore eligendi eum.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta temporibus eaque iusto delectus rerum
+               libero quae sunt accusamus provident! Quam libero est dolore eligendi eum.</p>
          </div>
          <div class="icono">
             <img src="img/icono3.svg" alt="A Tiempo">
             <h3>A Tiempo</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore vitae iure harum quasi error labore accusamus, atque, nostrum commodi voluptatum sunt nulla autem ipsa deserunt.</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore vitae iure harum quasi error labore
+               accusamus, atque, nostrum commodi voluptatum sunt nulla autem ipsa deserunt.</p>
          </div>
       </div>
-   </section>
+   </section> <!-- section -->
 
-   <main>
-      <h2>Casas y Depas en Venta</h2>
+   <main class="contenedor seccion">
+      <h2 class="fw-400 centrar-texto">Casas y Deptos en Venta</h2>
 
-      <div>
-         <img src="img/anuncio1.jpg" alt="Anuncio Casa en el Lago">
-         <h3>Casa de Lujo en el Lago</h3>
-         <p>Casa en el lago con excelente vista, acabados de lujo a un excelente precio.</p>
-         <p>$3.000.000</p>
-         <a href="#">Ver propiedad</a>
-      </div>
-      <div>
-         <img src="img/anuncio2.jpg" alt="Casa terminaciones de Lujo">
-         <h3>Casa terminaciones de Lujo</h3>
-         <p>Casa con diseño moderno, así como tecnología inteligente y amueblada.</p>
-         <p>$2.000.000</p>
-         <a href="#">Ver propiedad</a>
-      </div>
-      <div>
-         <img src="img/anuncio3.jpg" alt="Casa con Alberca">
-         <h3>Casa con Alberca</h3>
-         <p>Casa con alberca y acabados de lujo en la ciudad, excelente oportunidad.</p>
-         <p>$3.000.000</p>
-         <a href="#">Ver propiedad</a>
+      <div class="contenedor-anuncios">
+         <div class="anuncio">
+            <img src="img/anuncio1.jpg" alt="Anuncio Casa en el Lago">
+            <div class="contenido-anuncio">
+               <h3>Casa del Lago</h3>
+               <p>Casa en el lago con excelente vista, acabados de lujo a un excelente precio.</p>
+               <p class="precio">$3.000.000</p>
+               <ul class="iconos-caracteristicas">
+                  <li>
+                     <img src="img/icono_wc.svg" alt="Icono WC">
+                     <p>3</p>
+                  </li>
+                  <li>
+                     <img src="img/icono_dormitorio.svg" alt="Icono Dormitorio">
+                     <p>2</p>
+                  </li>
+                  <li>
+                     <img src="img/icono_estacionamiento.svg" alt="Icono Estacionamiento">
+                     <p>1</p>
+                  </li>
+               </ul>
+               <a href="#" class="boton boton-amarillo d-block">Ver propiedad</a>
+            </div>
+         </div>
+         <div class="anuncio">
+            <img src="img/anuncio2.jpg" alt="Casa Minimalista">
+            <div class="contenido-anuncio">
+               <h3>Casa Minimalista</h3>
+               <p>Casa con diseño moderno, así como tecnología inteligente y amueblada.</p>
+               <p class="precio">$2.000.000</p>
+               <ul class="iconos-caracteristicas">
+                  <li>
+                     <img src="img/icono_wc.svg" alt="Icono WC">
+                     <p>3</p>
+                  </li>
+                  <li>
+                     <img src="img/icono_dormitorio.svg" alt="Icono Dormitorio">
+                     <p>2</p>
+                  </li>
+                  <li>
+                     <img src="img/icono_estacionamiento.svg" alt="Icono Estacionamiento">
+                     <p>1</p>
+                  </li>
+               </ul>
+               <a href="#" class="boton boton-amarillo d-block">Ver propiedad</a>
+            </div>
+         </div>
+         <div class="anuncio">
+            <img src="img/anuncio3.jpg" alt="Casa con Alberca">
+            <div class="contenido-anuncio">
+               <h3>Casa con Alberca</h3>
+               <p>Casa con alberca y acabados de lujo en la ciudad, excelente oportunidad.</p>
+               <p class="precio">$3.000.000</p>
+               <ul class="iconos-caracteristicas">
+                  <li>
+                     <img src="img/icono_wc.svg" alt="Icono WC">
+                     <p>3</p>
+                  </li>
+                  <li>
+                     <img src="img/icono_dormitorio.svg" alt="Icono Dormitorio">
+                     <p>2</p>
+                  </li>
+                  <li>
+                     <img src="img/icono_estacionamiento.svg" alt="Icono Estacionamiento">
+                     <p>1</p>
+                  </li>
+               </ul>
+               <a href="#" class="boton boton-amarillo d-block">Ver propiedad</a>
+            </div>
+         </div>
       </div>
 
-      <a href="anuncios.html">Ver Todas</a>
+      <div class="ver-todas">
+         <a href="anuncios.html" class="boton boton-verde">Ver Todas</a>
+      </div>
    </main>
 
-   <section>
-      <h2>Encuentra la casa de tus sueños</h2>
-      <p>Llena el formulario de contacto y un asesor se pondrá en contacto contigo a la brevedad.</p>
-      <a href="contacto.html">Contáctanos</a>
+   <section class="imagen-contacto">
+      <div class="contenedor contenido-contacto">
+         <h2>Encuentra la casa de tus sueños</h2>
+         <p>Llena el formulario de contacto y un asesor se pondrá en contacto contigo a la brevedad.</p>
+         <a href="contacto.html" class="boton boton-amarillo">Contáctanos</a>
+      </div>
    </section>
 
-   <section>
-      <h3>Nuestro Blog</h3>
-      
-      <article>
-         <img src="img/blog1.jpg" alt="Entrada de Blog">
-         <h4>Terraza en el techo de tu casa.</h4>
-         <p>Escrito el: <em>20/10/2019</em>, por: <em>Admin</em></p>
-         <p>Consejos para construir una terraza en el techo de tu casa, con los mejores materiales y ahorrando dinero.</p>
-      </article>
-      <article>
-         <img src="img/blog2.jpg" alt="Entrada de Blog">
-         <h4>Guía para la decoración de tu hogar.</h4>
-         <p>Escrito el: <em>20/10/2019</em>, por: <em>Admin</em></p>
-         <p>Maximiza el espacio en tu hogar con ésta guía, aprende a combinar muebeles y colores para darle vida a tu espacio.</p>
-      </article>
-   </section>
+   <div class="seccion-inferior contenedor seccion">
+      <section class="blog">
+         <h3 class="centrar-texto fw-400">Nuestro Blog</h3>
 
-   <section>
-      <h3>Testimoniales</h3>
-      <blockquote>
-         El personal se comportó de una excelente forma, muy buena atención y predisposición y la casa que me ofrecieron cumple con todas mis expectativas.
-      </blockquote>
-      <p>- Mauricio Garay</p>
-   </section>
-   
-   <footer>
-      <nav class="navegacion">
-         <a href="nosotros.html" target="_blank">Nosotros</a>
-         <a href="anuncios.html" target="_blank">Anuncios</a>
-         <a href="blog.html" target="_blank">Blog</a>
-         <a href="contacto.html" target="_blank">Contacto</a>
-      </nav>
-   
-      <p>Todos los Derechos Rservados 2020 &copy;.</p>
+         <article class="entrada-blog">
+            <div class="imagen">
+               <img src="img/blog1.jpg" alt="Entrada de Blog">
+            </div>
+            <div class="texto-entrada">
+               <a href="#">
+                  <h4>Terraza en el techo de tu casa.</h4>
+               </a>
+               <p>Escrito el: <span>20/10/2019</span>, por: <span>Admin</span></p>
+               <p>Consejos para construir una terraza en el techo de tu casa, con los mejores materiales y ahorrando
+                  dinero.
+               </p>
+            </div>
+         </article>
+
+         <article class="entrada-blog">
+            <div class="imagen">
+               <img src="img/blog2.jpg" alt="Entrada de Blog">
+            </div>
+            <div class="texto-entrada">
+               <a href="#">
+                  <h4>Guía para la decoración de tu hogar.</h4>
+               </a>
+               <p>Escrito el: <span>20/10/2019</span>, por: <span>Admin</span></p>
+               <p>Maximiza el espacio en tu hogar con ésta guía, aprende a combinar muebeles y colores para darle vida a
+                  tu espacio.</p>
+            </div>
+         </article>
+      </section>
+
+      <section class="testimoniales">
+         <h3 class="centrar-texto fw-400">Testimoniales</h3>
+         <div class="testimonial">
+            <blockquote>
+               El personal se comportó de una excelente forma, muy buena atención y predisposición y la casa que me
+               ofrecieron
+               cumple con todas mis expectativas.
+            </blockquote>
+            <p>- Mauricio Garay</p>
+         </div>
+      </section>
+   </div>
+
+   <footer class="site-footer seccion">
+      <div class="contenedor contenedor-footer">
+         <nav class="navegacion">
+            <a href="nosotros.html" target="_blank">Nosotros</a>
+            <a href="anuncios.html" target="_blank">Anuncios</a>
+            <a href="blog.html" target="_blank">Blog</a>
+            <a href="contacto.html" target="_blank">Contacto</a>
+         </nav>
+
+         <p class="copyright">Todos los Derechos Rservados 2020 &copy;.</p>
+      </div>
    </footer>
 </body>
+
 </html>
